unpackaged/main/default/objects/APXT_BPM__Scheduled_Conductor_History__c/APXT_BPM__Scheduled_Conductor_History__c.object-meta.xml
<CustomObject>
    <label>Scheduled Conga Batch History</label>
    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Conga Batch History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>