unpackaged/main/default/objects/APXT_BPM__Scheduled_Conductor_History__c/fields/APXT_BPM__Conga_Conductor__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Conga_Conductor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Batch</label>
    <referenceTo>APXT_BPM__Conductor__c</referenceTo>
    <relationshipLabel>Scheduled Conga Batch History</relationshipLabel>
    <relationshipName>Scheduled_Conductor_History</relationshipName>
    <type>Lookup</type>
</CustomField>