unpackaged/main/default/objects/APXT_BPM__Scheduled_Conductor_History__c/fields/APXT_BPM__Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Dashboard_Link__c</fullName>
    <description>A link to the Conga Batch Dashboard for this schedule.</description>
    <label>Dashboard Link</label>
    <type>Url</type>
</CustomField>