unpackaged/main/default/objects/APXT_BPM__Scheduled_Conductor_History__c/fields/APXT_BPM__Date__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>