unpackaged/main/default/objects/APXT_BPM__Scheduled_Conductor_History__c/fields/APXT_BPM__Output_File_Link__c.field-meta.xml
<CustomField>
    <fullName>APXT_BPM__Output_File_Link__c</fullName>
    <label>Output File Link</label>
    <type>Url</type>
</CustomField>